# hPersist

./: .dockerignore  .env.example  .gitignore  .seed_demo_rich.sh  CODE_OF_CONDUCT.md  Dockerfile  README.md  mkdocs.yml  pyproject.toml  requirements.txt  start.bat  start.sh
.github/workflows/: ci.yml  docker.yml  docs.yml
app/: __init__.py  __main__.py  config.py  db.py  main.py  models.py
app/analytics/: aggregator.py
app/api/: collection.py  exports.py  i18n.py  insight.py  inventories.py  network.py  schemas.py  servers.py  settings.py  smart_hands.py  stats.py  tools.py  ws.py
app/core/: integrity.py  logging.py
app/exports/: builder.py  csv_writer.py  xlsx.py
app/jobs/: bus.py  runner.py
app/locales/: en.json  ru.json
app/network/: csv_parser.py  scanner.py
app/redfish/: __init__.py  client.py  walker.py
app/redfish/collectors/: __init__.py  base.py  manager.py  memory.py  network.py  pci.py  power.py  processor.py  storage.py  system.py
app/smart_hands/: generator.py  processor.py
app/smart_hands/template/: README.md  collect.py  requirements.txt
app/smart_hands/template/hpersist_collector/: client.py  collectors.py  (+3 more)
app/stats/: telemetry.py
app/tools/: redfish_tester.py
app/tools/bom_compare/: __init__.py  differ.py  service.py
app/tools/insight/: __init__.py  client.py  payload.py  prompts.py  service.py
app/tools/partsurfer/: __init__.py  cache.py  client.py  parser.py  service.py
app/tools/redfish/: tester.py
docs/: ARCHITECTURE.md  EXTENDING.md  ROADMAP.md  index.md  robots.txt
docs/javascripts/: network-bg.js
docs/stylesheets/: extra.css
frontend/: api.js  app.jsx  extras.css  icons.jsx  index.html  shell.jsx  styles.css
frontend/lib/: charts.jsx  command-palette.jsx  toast.jsx  widgets.jsx
frontend/screens/: add-inventory.jsx  add-local.jsx  add-smarthands.jsx  dashboard.jsx  export.jsx  inventories.jsx  progress.jsx  servers.jsx  settings.jsx  telemetry.jsx  tool-bomcompare.jsx  tool-insight.jsx  tool-partsurfer.jsx  tool-redfish.jsx  tool-scan.jsx
migrations/: env.py
migrations/versions/: 20260530_d720c2d3fae2_initial.py  20260604_326d0ea32da7_partsurfer_cache.py
overrides/: main.html
tests/: conftest.py  test_migration.py  test_models.py
tests/api/: test_endpoints.py  test_security.py
tests/fixtures/partsurfer/: found_with_bom.html  not_found.html  product_grouped_bom.html  product_no_bom.html
tests/network/: test_csv_parser.py
tests/smart_hands/: test_generator.py
tests/tools/bom_compare/: test_differ.py
tests/tools/insight/: test_client.py  test_payload.py  test_prompts.py  test_service.py
tests/tools/partsurfer/: test_cache.py  test_client.py  test_parser.py  test_service.py
