[project]
name = "hpersist"
version = "0.0.2"
description = "HPE configuration collector — iLO 4/5/6 over Redfish"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "alembic>=1.13",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy>=2.0",
    "pydantic>=2.5",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
    "pynacl>=1.5",
    "openpyxl>=3.1",
    "websockets>=12.0",
    "python-multipart>=0.0.9",
    "aiofiles>=23.2",
    "psycopg[binary]>=3.1",
]

[project.scripts]
hpersist = "app.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
